--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<html>
+<head>
+    <script type="text/javascript" src="script.js"></script>
+</head>
+
+<body>
+    <button onclick="sayHello('world')">Click Me
+    </button>
+    <div id = "result">
+    </div>
+</body>
+
+</html>
