--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Ovidiu Fritsch</h1>
-								<p>I like doing cool things with data.</p>
+								<p>Lover of data.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#about">About Me</a></li>
+								<!-- <li><a href="#about">About Me</a></li> -->
 								<li><a href="#intro">Projects</a></li>
 								<li><a href="#work">Experience</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -394,9 +394,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<!-- <footer id="footer">
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
+					</footer> -->
 
 			</div>
 
