--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 					<header id="header">
 						<div class="content">
 							<div class="inner">
-								<h1>Ovidiu Fritsch</h1>
-								<p>Lover of data.</p>
+								<h1>Ovi Fritsch</h1>
+								<p>Actively seeking Junior Software Engineering Role</p>
 							</div>
 						</div>
 						<nav>
