--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<nav>
 							<ul>
 								<!-- <li><a href="#about">About Me</a></li> -->
-								<li><a href="#intro">Projects</a></li>
+								<li><a href="#intro" class="hoplink">Projects</a></li>
 								<li><a href="#work">Experience</a></li>
 								<!-- <li><a href="#contact">Contact</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -54,9 +54,10 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Projects</h2>
+								<p>*all code and more cool projects available on Github</p>
 								<div id="mapy">
 									<div class="mapy_headers">
-										<h3>Mapy</h3>
+										<h3>Map Chat</h3>
 										<p>A location-based communication platform that allows users to interact with different communities.</p>
 									</div>
 									<div id="mapy_content_wrap">
@@ -147,7 +148,6 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<ul>
 									<li>
 										<h3>Who</h3>
@@ -459,6 +459,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/my_edits.js"></script>
 
 	</body>
 </html>
