--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Projects</h2>
-								<p>*all code and other projects available on Github</p>
+								<p>*all code and other projects available <a href="https://github.com/ovifrisch">here</a></p>
 								<div id="mapy">
 									<div class="mapy_headers">
 										<h3>Map Chat</h3>
