--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 							<article id="intro">
 								<h2 class="major">Projects</h2>
 								<p>*all code and other projects available <a href="https://github.com/ovifrisch">here</a></p>
-								<div id="mapy">
-									<div class="mapy_headers">
+								<div class="project">
+									<div class="project_headers">
 										<h3>Map Chat</h3>
 										<p>A location-based communication platform that allows users to interact with different communities.</p>
 									</div>
-									<div id="mapy_content_wrap">
-										<div id="mapy_techs">
+									<div class="project_content_wrap">
+										<div class="project_techs">
 											<h5>Technologies Used:</h5>
 											<ul>
 												<li>Ruby/Rails</li>
@@ -73,18 +73,18 @@
 												<li>ActionCable</li>
 											</ul>
 										</div>
-										<div id="mapy_image">
+										<div class="project_image">
 											<a href="http://mapchat1.herokuapp.com/"><img src="images/mapy.png" alt="" height="213px"></a>
 										</div>
 									</div>
 								</div>
-								<div id="sudoku">
-									<div id="sudoku_headers">
+								<div class="project">
+									<div class="project_headers">
 										<h3>Sudoku Solver</h3>
 										<p>A service that provides Sudoku enthusiasts with the ability to upload a picture of their work in progress and receive hints on how to complete it.</p>
 									</div>
-									<div id="sudoku_content_wrap">
-										<div id="sudoku_techs">
+									<div class="project_content_wrap">
+										<div class="project_techs">
 											<h5>Technologies Used:</h5>
 											<ul>
 												<li>C++ with OpenCV</li>
@@ -93,19 +93,40 @@
 												<li>Heroku</li>
 											</ul>
 										</div>
-										<div id="sudoku_image">
+										<div class="project_image">
 											<a href="https://sudokusolver1.herokuapp.com/"><img src="images/sudoku.png" alt="" height="213px"></a>
 										</div>
 									</div>
 								</div>
 
-								<div id="pool">
-									<div id="pool_headers">
+                <div class="project">
+                  <div class="project_headers">
+										<h3>Autistic Classroom</h3>
+										<p>A personalized, context aware e-learning platform for children with autism.</p>
+									</div>
+                  <div class="project_content_wrap">
+										<div class="project_techs">
+											<h5>Technologies Used:</h5>
+											<ul>
+												<li>C++ with OpenCV</li>
+												<li>PHP</li>
+												<li>Javascript, HTML5, CSS</li>
+												<li>Heroku</li>
+											</ul>
+										</div>
+										<div class="project_image">
+											<a href="https://lit-island-28681.herokuapp.com/"><img src="images/autism.png" alt="" height="213px"></a>
+										</div>
+									</div>
+                </div>
+
+								<div class="project">
+									<div class="project_headers">
 										<h3>8 Ball Pool</h3>
 										<p>A website for playing 8 Ball Pool</p>
 									</div>
-									<div id="pool_content_wrap">
-										<div id="pool_techs">
+									<div class="project_content_wrap">
+										<div class="project_techs">
 											<h5>Technologies Used:</h5>
 											<ul>
 												<li>Javascript, HTML, CSS</li>
@@ -113,7 +134,7 @@
 												<li>Cannon.js</li>
 											</ul>
 										</div>
-										<div id="pool_image">
+										<div class="project_image">
 											<a href="https://ovifrisch.github.io/Pool/"><img src="images/pool.png" alt="" height="213px"></a>
 										</div>
 									</div>
