changed techs for autism

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 										<div class="project_techs">
 											<h5>Technologies Used:</h5>
 											<ul>
-												<li>C++ with OpenCV</li>
-												<li>PHP</li>
+												<li>Python with Django</li>
+                        <li>Google Vision API</li>
 												<li>Javascript, HTML5, CSS</li>
 												<li>Heroku</li>
 											</ul>
