--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						</div>
 						<nav>
 							<ul>
-								<!-- <li><a href="#about">About Me</a></li> -->
+								<li><a href="#about">About Me</a></li>
 								<li><a href="#intro" class="hoplink">Projects</a></li>
 								<li><a href="#work">Experience</a></li>
 								<!-- <li><a href="#contact">Contact</a></li> -->
@@ -102,7 +102,7 @@
                 <div class="project">
                   <div class="project_headers">
 										<h3>Autistic Classroom</h3>
-										<p>A personalized, context aware e-learning platform for children with autism.</p>
+										<p>A context aware e-learning platform for children with autism. Generic problems are transformed to personalized problems for each unique child. Built at HackDavis 2019.</p>
 									</div>
                   <div class="project_content_wrap">
 										<div class="project_techs">
@@ -172,19 +172,16 @@
 								<ul>
 									<li>
 										<h3>Who</h3>
-										<p>This is an impossible philosophical question.</p>
+										<p>I like tackling interesting projects that could be used by other people. I have a good understanding of several web technologies and a growing interest in data science as well as theoretical computer science. A fan of sports, Monday mornings, coffee, and dogs.</p>
 									</li>
 									<li>
 										<h3>Where</h3>
-										<p>Cluj-Napoca, Romania -> Toronto, Canada -> Palo Alto, California</p>
-									</li>
-									<li>
-										<h3>What</h3>
-										<p>I like coding, playing tennis, backpacking, coffee, philosophy, and dogs.</p>
+										<p>Born in Toronto, Canada. Moved to the Bay Area in 2012. Currently finishing my Bachelor's Computer Science degree at <a href="https://www.ucdavis.edu/">UC Davis</a>.</p>
+
 									</li>
 									<li>
 										<h3>Why</h3>
-										<p>I don't know, I just do things, and if they give me satisfaction I keep doing them.</p>
+										<p>I don't know, I just do things, and if they give me long-term satisfaction I keep doing them.</p>
 									</li>
 								</ul>
 							</article>
