change about me

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Ovi Fritsch</h1>
-								<p>Actively seeking Junior Software Engineering Role</p>
+								<p>Actively Pursuing Entry Level Software Engineering Position</p>
 							</div>
 						</div>
 						<nav>
@@ -168,21 +168,10 @@
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">About</h2>
+								<h2 class="major">About Me</h2>
 								<ul>
-									<li>
-										<h3>Who</h3>
-										<p>I like tackling interesting projects that could be used by other people. I have a good understanding of several web technologies and a growing interest in data science as well as theoretical computer science. A fan of sports, Monday mornings, coffee, and dogs.</p>
-									</li>
-									<li>
-										<h3>Where</h3>
-										<p>Born in Toronto, Canada. Moved to the Bay Area in 2012. Currently finishing my Bachelor's Computer Science degree at <a href="https://www.ucdavis.edu/">UC Davis</a>.</p>
-
-									</li>
-									<li>
-										<h3>Why</h3>
-										<p>I don't know, I just do things, and if they give me long-term satisfaction I keep doing them.</p>
-									</li>
+                    <p>I was born in Toronto and lived there for the first half of my life. Then I moved to the Bay Area in 2012. I am currently studying Computer Scienve @ <a href="https://www.ucdavis.edu/">UC Davis</a>.</p>
+										<p>I like tackling intimidating problems whose solutions can be useful for other people. I have a good understanding of several web technologies and a growing interest in data science as well as theoretical computer science. Other than coding, I find satisfaction in my relationships with others, working out at the gym, reading, and metitation.</p>
 								</ul>
 							</article>
 
