edits to experience and kf im

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<p>*all code and other projects available <a href="https://github.com/ovifrisch">here</a></p>
 								<div class="project">
 									<div class="project_headers">
-										<h3>Map Chat</h3>
+										<h3><a href="http://mapchat1.herokuapp.com/">Map Chat</a></h3>
 										<p>A location-based communication platform that allows users to interact with different communities.</p>
 									</div>
 									<div class="project_content_wrap">
@@ -80,7 +80,7 @@
 								</div>
 								<div class="project">
 									<div class="project_headers">
-										<h3>Sudoku Solver</h3>
+										<h3><a href="https://sudokusolver1.herokuapp.com/">Sudoku Solver</a></h3>
 										<p>A service that provides Sudoku enthusiasts with the ability to upload a picture of their work in progress and receive hints on how to complete it.</p>
 									</div>
 									<div class="project_content_wrap">
@@ -101,7 +101,7 @@
 
                 <div class="project">
                   <div class="project_headers">
-										<h3>Autistic Classroom</h3>
+										<h3><a href="https://lit-island-28681.herokuapp.com/">Autistic Classroom</a></h3>
 										<p>A context aware e-learning platform for children with autism. Generic problems are transformed to personalized problems for each unique child. Built at HackDavis 2019.</p>
 									</div>
                   <div class="project_content_wrap">
@@ -146,23 +146,23 @@
 								<h2 class="major">Experience</h2>
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<ul>
-									<li>
-										<h3 id="karfarm"><a href="https://karfarm.com/">Karfarm</a></h3>
-										<ul>
-											<li>Summer 2016</li>
-												<ul>
-													<li> Used Python with BeautifulSoup library to extract commonly occurring car options/packages across many dealership websites. Used similar techniques to extract salesperson reviews from multiple websites.</li>
-												</ul>
-											<li>Summer 2018</li>
-												<ul>
-													<li>Designed and implemented the backend and networking framework for the company’s chat system using Faye and private_pub.</li>
+                  <a href="https://karfarm.com/"><img src="images/karfarm.png" class="kf_im" alt="" height="30px"></a>
 
-													<li>I created a Python script using Selenium WebDriver that periodically updates a postgres database with data across 40 websites. The script navigates each website in a generalized fashion, according to input parameters.</li>
+									<h3 id="karfarm" class="kf_im"><a href="https://karfarm.com/">Karfarm</a></h3>
+									<ul>
+                    <li>Summer 2018</li>
+											<ul>
+												<li>Designed and implemented the database tables and relations for a real-time chat, as well as the backend SQL queries to retrieve data. I also worked on a team to implement the Pub-Sub messaging pattern that enabled messages to be sent in real time.</li>
 
-													<li>Worked closely with a team to go from design to implementation of several web pages.</li>
-												</ul>
-										</ul>
-									</li>
+												<li>Using Selenium Webdriver, I wrote a generic Python script that generically navigates 40 unique car dealership websites to scrape various specs. Then I integrated it with the server so that it periodically runs and updates a Postgres database.</li>
+
+												<li>Worked closely with the UI/UX team to implement the design of several web pages using HTML,CSS, and Javascript.</li>
+											</ul>
+										<li>Summer 2016</li>
+											<ul>
+												<li>Used Python with BeautifulSoup to extract commonly occurring car options/packages across many dealership websites. I used a similar technique applied to extracting salesperson reviews from multiple websites.</li>
+											</ul>
+									</ul>
 								</ul>
 							</article>
 
