--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 							<ul>
 								<li><a href="#about">About Me</a></li>
 								<li><a href="#intro" class="hoplink">Projects</a></li>
+								<li><a href="#papers">Papers</a></li>
 								<li><a href="#work">Experience</a></li>
-								<!-- <li><a href="#contact">Contact</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -99,17 +99,17 @@
 									</div>
 								</div>
 
-                <div class="project">
-                  <div class="project_headers">
+				<div class="project">
+				  <div class="project_headers">
 										<h3><a href="https://lit-island-28681.herokuapp.com/">Autistic Classroom</a></h3>
 										<p>A context aware e-learning platform for children with autism. Generic problems are transformed to personalized problems for each unique child. Built at HackDavis 2019.</p>
 									</div>
-                  <div class="project_content_wrap">
+				  <div class="project_content_wrap">
 										<div class="project_techs">
 											<h5>Technologies Used:</h5>
 											<ul>
 												<li>Python with Django</li>
-                        <li>Google Vision API</li>
+						<li>Google Vision API</li>
 												<li>Javascript, HTML5, CSS</li>
 												<li>Heroku</li>
 											</ul>
@@ -118,7 +118,7 @@
 											<a href="https://lit-island-28681.herokuapp.com/"><img src="images/autism.png" alt="" height="213px"></a>
 										</div>
 									</div>
-                </div>
+				</div>
 
 								<div class="project">
 									<div class="project_headers">
@@ -146,11 +146,11 @@
 								<h2 class="major">Experience</h2>
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<ul>
-                  <a href="https://karfarm.com/"><img src="images/karfarm.png" class="kf_im" alt="" height="30px"></a>
+				  <a href="https://karfarm.com/"><img src="images/karfarm.png" class="kf_im" alt="" height="30px"></a>
 
 									<h3 id="karfarm" class="kf_im"><a href="https://karfarm.com/">Karfarm</a></h3>
 									<ul>
-                    <li>Summer 2018</li>
+					<li>Summer 2018</li>
 											<ul>
 												<li>Designed and implemented the database tables and relations for a real-time chat, as well as the backend SQL queries to retrieve data. I also worked on a team to implement the Pub-Sub messaging pattern that enabled messages to be sent in real time.</li>
 
@@ -170,40 +170,15 @@
 							<article id="about">
 								<h2 class="major">About Me</h2>
 								<ul>
-                    <p>I was born in Toronto and lived there for the first half of my life. Then I moved to the Bay Area in 2012. I am currently studying Computer Science @ <a href="https://www.ucdavis.edu/">UC Davis</a>.</p>
+					<p>I was born in Toronto and lived there for the first half of my life. Then I moved to the Bay Area in 2012. I am currently studying Computer Science @ <a href="https://www.ucdavis.edu/">UC Davis</a>.</p>
 										<p>I like tackling intimidating problems whose solutions can be useful for other people. I have a good understanding of several web technologies and a growing interest in data science as well as theoretical computer science. Other than coding, I find satisfaction in my relationships with others, working out at the gym, reading, and meditation.</p>
 								</ul>
 							</article>
 
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+						<!-- Papers -->
+							<article id="papers">
+								<h2 class="major">Papers</h2>
+								<h3 id="svm" class="svm"><a href="https://ovifrisch.github.io/assets/pdfs/SVC2.pdf">Implementing a Parallel Support Vector Machine From Scratch</a></h3>
 							</article>
 
 						<!-- Elements -->
@@ -228,9 +203,9 @@
 									<pre><code>i = 0;
 
 while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
+	print 'Iteration ' + i;
+	deck.shuffle();
+	i++;
 }
 
 print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
