updated school grad

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 							<article id="about">
 								<h2 class="major">About Me</h2>
 								<ul>
-					<p>I was born in Toronto and lived there for the first half of my life. Then I moved to the Bay Area in 2012. I am currently studying Computer Science @ <a href="https://www.ucdavis.edu/">UC Davis</a>.</p>
+					<p>I was born in Toronto and lived there for the first half of my life. Then I moved to the Bay Area in 2012. I received my BS in Computer Science @ <a href="https://www.ucdavis.edu/">UC Davis</a> in 2019.</p>
 										<p>I like tackling intimidating problems whose solutions can be useful for other people. I have a good understanding of several web technologies and a growing interest in data science as well as theoretical computer science. Other than coding, I find satisfaction in my relationships with others, working out at the gym, reading, and meditation.</p>
 								</ul>
 							</article>
