--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					</header>
 					<div id="links">
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/ovi-fritsch-4a962a117/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ovidiu-fritsch/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/ovifrisch" class="icon fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://medium.com/@oafritsch" class="icon fa-medium"><span class="label">Medium</span></a></li>
 						</ul>
