change url for sudoku

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								</div>
 								<div class="project">
 									<div class="project_headers">
-										<h3><a href="https://sudokusolver1.herokuapp.com/">Sudoku Solver</a></h3>
+										<h3><a href="https://sudokulver.herokuapp.com/">Sudoku Solver</a></h3>
 										<p>A service that provides Sudoku enthusiasts with the ability to upload a picture of their work in progress and receive hints on how to complete it.</p>
 									</div>
 									<div class="project_content_wrap">
