fixed broken link

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 											</ul>
 										</div>
 										<div class="project_image">
-											<a href="https://sudokusolver1.herokuapp.com/"><img src="images/sudoku.png" alt="" height="213px"></a>
+											<a href="https://sudokulver.herokuapp.com/"><img src="images/sudoku.png" alt="" height="213px"></a>
 										</div>
 									</div>
 								</div>
