new tab on click and reorder

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 					</header>
 					<div id="links">
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/ovidiu-fritsch/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://github.com/ovifrisch" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://medium.com/@oafritsch" class="icon fa-medium"><span class="label">Medium</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ovidiu-fritsch/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://github.com/ovifrisch" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://medium.com/@oafritsch" target="_blank" class="icon fa-medium"><span class="label">Medium</span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -57,25 +57,7 @@
 								<p>*all code and other projects available <a href="https://github.com/ovifrisch">here</a></p>
 								<div class="project">
 									<div class="project_headers">
-										<h3><a href="https://ovifrisch.github.io/atp" target="_blank">ATP Tennis Visualization Tool</a></h3>
-										<p>Compare tennis players across different eras</p>
-									</div>
-									<div class="project_content_wrap">
-										<div class="project_techs">
-											<h5>Technologies Used:</h5>
-											<ul>
-												<li>React</li>
-												<li>Flask</li>
-											</ul>
-										</div>
-										<div class="project_image" style="left: 200px">
-											<a href="https://ovifrisch.github.io/atp"><img src="images/atp.png" alt="" height="213px"></a>
-										</div>
-									</div>
-								</div>
-								<div class="project">
-									<div class="project_headers">
-										<h3><a href="http://mapchat1.herokuapp.com/">Map Chat</a></h3>
+										<h3><a href="http://mapchat1.herokuapp.com/" target="_blank">Map Chat</a></h3>
 										<p>A location-based communication platform that allows users to interact with different communities.</p>
 									</div>
 									<div class="project_content_wrap">
@@ -92,13 +74,33 @@
 											</ul>
 										</div>
 										<div class="project_image">
-											<a href="http://mapchat1.herokuapp.com/"><img src="images/mapy.png" alt="" height="213px"></a>
+											<a href="http://mapchat1.herokuapp.com/" target="_blank"><img src="images/mapy.png" alt="" height="213px"></a>
 										</div>
 									</div>
 								</div>
 								<div class="project">
 									<div class="project_headers">
-										<h3><a href="https://sudokulver.herokuapp.com/">Sudoku Solver</a></h3>
+										<h3><a href="https://ovifrisch.github.io/atp" target="_blank">ATP Tennis Visualization Tool</a></h3>
+										<p>Compare tennis players across different eras</p>
+									</div>
+									<div class="project_content_wrap">
+										<div class="project_techs">
+											<h5>Technologies Used:</h5>
+											<ul>
+												<li>React</li>
+												<li>Flask</li>
+												<li>Chart.js</li>
+												<li>PostgreSQL</li>
+											</ul>
+										</div>
+										<div class="project_image" style="left: 200px">
+											<a href="https://ovifrisch.github.io/atp" target="_blank"><img src="images/atp.png" alt="" height="213px"></a>
+										</div>
+									</div>
+								</div>
+								<div class="project">
+									<div class="project_headers">
+										<h3><a href="https://sudokulver.herokuapp.com/" target="_blank">Sudoku Solver</a></h3>
 										<p>A service that provides Sudoku enthusiasts with the ability to upload a picture of their work in progress and receive hints on how to complete it.</p>
 									</div>
 									<div class="project_content_wrap">
@@ -112,14 +114,14 @@
 											</ul>
 										</div>
 										<div class="project_image">
-											<a href="https://sudokulver.herokuapp.com/"><img src="images/sudoku.png" alt="" height="213px"></a>
+											<a href="https://sudokulver.herokuapp.com/" target="_blank"><img src="images/sudoku.png" alt="" height="213px"></a>
 										</div>
 									</div>
 								</div>
 
 				<div class="project">
 				  <div class="project_headers">
-										<h3><a href="https://lit-island-28681.herokuapp.com/">Autistic Classroom</a></h3>
+										<h3><a href="https://lit-island-28681.herokuapp.com/" target="_blank">Autistic Classroom</a></h3>
 										<p>A context aware e-learning platform for children with autism. Generic problems are transformed to personalized problems for each unique child. Built at HackDavis 2019.</p>
 									</div>
 				  <div class="project_content_wrap">
@@ -133,7 +135,7 @@
 											</ul>
 										</div>
 										<div class="project_image">
-											<a href="https://lit-island-28681.herokuapp.com/"><img src="images/autism.png" alt="" height="213px"></a>
+											<a href="https://lit-island-28681.herokuapp.com/" target="_blank"><img src="images/autism.png" alt="" height="213px"></a>
 										</div>
 									</div>
 				</div>
@@ -153,7 +155,7 @@
 											</ul>
 										</div>
 										<div class="project_image">
-											<a href="https://ovifrisch.github.io/Pool/"><img src="images/pool.png" alt="" height="213px"></a>
+											<a href="https://ovifrisch.github.io/Pool/" target="_blank"><img src="images/pool.png" alt="" height="213px"></a>
 										</div>
 									</div>
 								</div>
@@ -164,9 +166,9 @@
 								<h2 class="major">Experience</h2>
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<ul>
-				  <a href="https://karfarm.com/"><img src="images/karfarm.png" class="kf_im" alt="" height="30px"></a>
+				  <a href="https://karfarm.com/" target="_blank"><img src="images/karfarm.png" class="kf_im" alt="" height="30px"></a>
 
-									<h3 id="karfarm" class="kf_im"><a href="https://karfarm.com/">Karfarm</a></h3>
+									<h3 id="karfarm" class="kf_im"><a href="https://karfarm.com/" target="_blank">Karfarm</a></h3>
 									<ul>
 					<li>Summer 2018</li>
 											<ul>
@@ -188,7 +190,7 @@
 							<article id="about">
 								<h2 class="major">About Me</h2>
 								<ul>
-					<p>I was born in Toronto and lived there for the first half of my life. Then I moved to the Bay Area in 2012. I received my BS in Computer Science @ <a href="https://www.ucdavis.edu/">UC Davis</a> in 2019.</p>
+					<p>I was born in Toronto and lived there for the first half of my life. Then I moved to the Bay Area in 2012. I received my BS in Computer Science @ <a href="https://www.ucdavis.edu/" target="_blank">UC Davis</a> in 2019.</p>
 										<p>I like tackling intimidating problems whose solutions can be useful for other people. I have a good understanding of several web technologies and a growing interest in data science as well as theoretical computer science. Other than coding, I find satisfaction in my relationships with others, working out at the gym, reading, and meditation.</p>
 								</ul>
 							</article>
@@ -196,7 +198,7 @@
 						<!-- Papers -->
 							<article id="papers">
 								<h2 class="major">Papers</h2>
-								<h3 id="svm" class="svm"><a href="https://ovifrisch.github.io/assets/pdfs/SVC2.pdf">Implementing a Parallel Support Vector Machine From Scratch</a></h3>
+								<h3 id="svm" class="svm"><a href="https://ovifrisch.github.io/assets/pdfs/SVC2.pdf" target="_blank">Implementing a Parallel Support Vector Machine From Scratch</a></h3>
 							</article>
 
 						<!-- Elements -->
