medium url change

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/ovidiu-fritsch/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/ovifrisch" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://medium.com/@oafritsch" target="_blank" class="icon fa-medium"><span class="label">Medium</span></a></li>
+							<li><a href="https://medium.com/@ovidiu.fritsch" target="_blank" class="icon fa-medium"><span class="label">Medium</span></a></li>
 						</ul>
 					</div>
 				</div>
