--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Ovi Fritsch</h1>
-								<p>Actively Pursuing Entry Level Software Engineering Position</p>
+								<p>Backend Software Engineer @ Genapsys</p>
 							</div>
 						</div>
 						<nav>
@@ -190,8 +190,8 @@
 							<article id="about">
 								<h2 class="major">About Me</h2>
 								<ul>
-					<p>I was born in Toronto and lived there for the first half of my life. Then I moved to the Bay Area in 2012. I received my BS in Computer Science @ <a href="https://www.ucdavis.edu/" target="_blank">UC Davis</a> in 2019.</p>
-										<p>I like tackling intimidating problems whose solutions can be useful for other people. I have a good understanding of several web technologies and a growing interest in data science as well as theoretical computer science. Other than coding, I find satisfaction in my relationships with others, working out at the gym, reading, and meditation.</p>
+					<p>I was born in Toronto and lived there for most of my childhood. Then I moved to the SF Bay Area in 2012. I received my BS in Computer Science @ <a href="https://www.ucdavis.edu/" target="_blank">UC Davis</a> in 2019. Currently I am working at <a href="https://www.ucdavis.edu/" target="_blank">Genapsys</a> as a Backend Software Engineer.</p>
+										<p>The coolest, most awesome thing in the world is the possibility of safely and securely connecting brains to computers. This is the dream and everything I do revolves around developing the technical skillset to be able to contribute to this technology.</p>
 								</ul>
 							</article>
 
