--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@
 							<article id="about">
 								<h2 class="major">About Me</h2>
 								<ul>
-					<p>I was born in Toronto and lived there for most of my childhood. Then I moved to the SF Bay Area in 2012. I received my BS in Computer Science @ <a href="https://www.ucdavis.edu/" target="_blank">UC Davis</a> in 2019. Currently I am working at <a href="https://www.ucdavis.edu/" target="_blank">Genapsys</a> as a Backend Software Engineer.</p>
-										<p>The coolest, most awesome thing in the world is the possibility of safely and securely connecting brains to computers. This is the dream and everything I do revolves around developing the technical skillset to be able to contribute to this technology.</p>
+					<p>I was born in Toronto and lived there for most of my childhood. Then I moved to the SF Bay Area in 2012. I received my BS in Computer Science @ <a href="https://www.ucdavis.edu/" target="_blank">UC Davis</a> in 2019.</p>
 								</ul>
 							</article>
 
