--- a/index.html
+++ b/index.html
@@ -166,22 +166,31 @@
 								<h2 class="major">Experience</h2>
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<ul>
-				  <a href="https://karfarm.com/" target="_blank"><img src="images/karfarm.png" class="kf_im" alt="" height="30px"></a>
-
-									<h3 id="karfarm" class="kf_im"><a href="https://karfarm.com/" target="_blank">Karfarm</a></h3>
+									<a href="https://genapsys.com/" target="_blank"><img src="images/genapsys.png" class="company_im" alt="" height="30px"></a>
+									  <p id="company"><a href="https://genapsys.com/" target="_blank">GenapSys</a></p>
+									  <br><br>
 									<ul>
-					<li>Summer 2018</li>
+										<h4>Sep 2019 - Present</h4>
+										<ul>
+											<li>Building data analysis platforms on the cloud.</li>
+										</ul>
+									</ul>
+								</ul>
+								<ul>
+									<a href="https://karfarm.com/" target="_blank"><img src="images/karfarm.png" class="company_im" alt="" height="30px"></a>
+									  <p id="company"><a href="https://karfarm.com/" target="_blank">Karfarm</a></p>
+									  <br><br>
+									<ul>
+										<h4>Jun - Sep 2018</h4>
 											<ul>
 												<li>Designed and implemented the database tables and relations for a real-time chat, as well as the backend SQL queries to retrieve data. I also worked on a team to implement the Pub-Sub messaging pattern that enabled messages to be sent in real time.</li>
-
-												<li>Using Selenium Webdriver, I wrote a generic Python script that generically navigates 40 unique car dealership websites to scrape various specs. Then I integrated it with the server so that it periodically runs and updates a Postgres database.</li>
-
-												<li>Worked closely with the UI/UX team to implement the design of several web pages using HTML,CSS, and Javascript.</li>
+				  								<li>Using Selenium Webdriver, I wrote a generic Python script that generically navigates 40 unique car dealership websites to scrape various specs. Then I integrated it with the server so that it periodically runs and updates a Postgres database.</li>
+				  								<li>Worked closely with the UI/UX team to implement the design of several web pages using HTML,CSS, and Javascript.</li>
 											</ul>
-										<li>Summer 2016</li>
-											<ul>
-												<li>Used Python with BeautifulSoup to extract commonly occurring car options/packages across many dealership websites. I used a similar technique applied to extracting salesperson reviews from multiple websites.</li>
-											</ul>
+											<h4>Jun - Sep 2016</h4>
+												<ul>
+													<li>Used Python with BeautifulSoup to extract commonly occurring car options/packages across many dealership websites. I used a similar technique applied to extracting salesperson reviews from multiple websites.</li>
+												</ul>
 									</ul>
 								</ul>
 							</article>
@@ -190,7 +199,7 @@
 							<article id="about">
 								<h2 class="major">About Me</h2>
 								<ul>
-					<p>I was born in Toronto and lived there for most of my childhood. Then I moved to the SF Bay Area in 2012. I received my BS in Computer Science @ <a href="https://www.ucdavis.edu/" target="_blank">UC Davis</a> in 2019.</p>
+					<p>I was born in Toronto and lived there for most of my childhood. Then I moved to the SF Bay Area in 2012. I received my BS in Computer Science @ <a href="https://genapsys.com" target="_blank">UC Davis</a> in 2019 and I currently work as a Software Engineer @ <a href="https://www.ucdavis.edu/" target="_blank">GenapSys</a>.</p>
 								</ul>
 							</article>
 
