--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<ul>
 									<a href="https://genapsys.com/" target="_blank"><img src="images/genapsys.png" class="company_im" alt="" height="30px"></a>
-									  <p id="company"><a href="https://genapsys.com/" target="_blank">GenapSys</a></p>
-									  <br><br>
+									  <p id="company"><a href="https://genapsys.com/" target="_blank">GenapSys&nbsp;&nbsp; - </a><p class="swe_position">&nbsp;Back End Software Engineer</p></p>
 									<ul>
 										<h4>Sep 2019 - Present</h4>
 										<ul>
@@ -178,8 +177,7 @@
 								</ul>
 								<ul>
 									<a href="https://karfarm.com/" target="_blank"><img src="images/karfarm.png" class="company_im" alt="" height="30px"></a>
-									  <p id="company"><a href="https://karfarm.com/" target="_blank">Karfarm</a></p>
-									  <br><br>
+									  <p id="company"><a href="https://karfarm.com/" target="_blank">Karfarm&nbsp;&nbsp; - </a><p class="swe_position">&nbsp;Software Engineering Intern</p></p>
 									<ul>
 										<h4>Jun - Sep 2018</h4>
 											<ul>
