--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 					<header id="header">
 						<div class="content">
 							<div class="inner">
-								<h1>Ovi Fritsch</h1>
-								<p>Backend Software Engineer @ Genapsys</p>
+								<h1>Ovidiu (Ovi) Fritsch</h1>
+								<p>I have a passion for building software that people never complain about.</p>
 							</div>
 						</div>
 						<nav>
@@ -167,11 +167,11 @@
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<ul>
 									<a href="https://genapsys.com/" target="_blank"><img src="images/genapsys.png" class="company_im" alt="" height="30px"></a>
-									  <p id="company"><a href="https://genapsys.com/" target="_blank">GenapSys&nbsp;&nbsp; - </a><p class="swe_position">&nbsp;Back End Software Engineer</p></p>
+									  <p id="company"><a href="https://genapsys.com/" target="_blank">GenapSys&nbsp;&nbsp; - </a><p class="swe_position">&nbsp;Software Engineer II</p></p>
 									<ul>
 										<h4>Sep 2019 - Present</h4>
 										<ul>
-											<li>Building data analysis platforms on the cloud.</li>
+											<li>Building <a href="https://cloudapp.dev.genapsys.com" target="_blank">Genhub</a>, a Cloud Platform for <a href="https://en.wikipedia.org/wiki/Massive_parallel_sequencing" target="_blank">NGS</a>. I am responsible for all things backend.</li>
 										</ul>
 									</ul>
 								</ul>
@@ -197,7 +197,7 @@
 							<article id="about">
 								<h2 class="major">About Me</h2>
 								<ul>
-					<p>I was born in Toronto and lived there for most of my childhood. Then I moved to the SF Bay Area in 2012. I received my BS in Computer Science @ <a href="https://genapsys.com" target="_blank">UC Davis</a> in 2019 and I currently work as a Software Engineer @ <a href="https://www.ucdavis.edu/" target="_blank">GenapSys</a>.</p>
+					<p>I was born in Toronto and lived there for most of my childhood. Then I moved to the SF Bay Area in 2012. I received my BS in Computer Science @ <a href="https://www.ucdavis.edu" target="_blank">UC Davis</a> in 2019 and I currently work as a Software Engineer @ <a href="https://genapsys.com" target="_blank">Genapsys</a>.</p>
 								</ul>
 							</article>
 
