--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Ovidiu (Ovi) Fritsch</h1>
-								<p>I have a passion for building software that people never complain about.</p>
+								<p>I like building things that people use and never complain about.</p>
 							</div>
 						</div>
 						<nav>
