--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<ul>
 									<a href="https://genapsys.com/" target="_blank"><img src="images/genapsys.png" class="company_im" alt="" height="30px"></a>
-									  <p id="company"><a href="https://genapsys.com/" target="_blank">GenapSys&nbsp;&nbsp; - </a><p class="swe_position">&nbsp;Software Engineer II</p></p>
+									  <p id="company"><a href="https://genapsys.com/" target="_blank">Genapsys&nbsp;&nbsp; - </a><p class="swe_position">&nbsp;Software Engineer II</p></p>
 									<ul>
 										<h4>Sep 2019 - Present</h4>
 										<ul>
