--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
 									<ul>
 										<h4>Sep 2019 - Present</h4>
 										<ul>
-											<li>Building <a href="https://cloudapp.dev.genapsys.com" target="_blank">Genhub</a>, a Cloud Platform for <a href="https://en.wikipedia.org/wiki/Massive_parallel_sequencing" target="_blank">NGS</a>. I am responsible for all things backend.</li>
+											<li>Building <b><a href="https://cloudapp.dev.genapsys.com" target="_blank">Genhub</a></b>, a Cloud Platform for <b><a href="https://en.wikipedia.org/wiki/Massive_parallel_sequencing" target="_blank">Next Generation Sequencing</a></b>. I am responsible for all things backend.</li>
 										</ul>
 									</ul>
 								</ul>
 								<ul>
 									<a href="https://karfarm.com/" target="_blank"><img src="images/karfarm.png" class="company_im" alt="" height="30px"></a>
-									  <p id="company"><a href="https://karfarm.com/" target="_blank">Karfarm&nbsp;&nbsp; - </a><p class="swe_position">&nbsp;Software Engineering Intern</p></p>
+									  <p id="company"><a href="https://karfarm.com/" target="_blank">Karfarm&nbsp;&nbsp; - </a><p class="swe_position">&nbsp;Software Engineer (Internship)</p></p>
 									<ul>
 										<h4>Jun - Sep 2018</h4>
 											<ul>
