--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 							<article id="about">
 								<h2 class="major">About Me</h2>
 								<ul>
-					<p>I was born in Toronto and lived there for most of my childhood. Then I moved to the SF Bay Area in 2012. I received my BS in Computer Science @ <a href="https://www.ucdavis.edu" target="_blank">UC Davis</a> in 2019 and I currently work as a Software Engineer @ <a href="https://genapsys.com" target="_blank">Genapsys</a>.</p>
+					<p>I was born in Toronto and lived there for most of my childhood. Then I moved to the SF Bay Area in 2012. I received my BS in Computer Science @ <a href="https://www.ucdavis.edu" target="_blank">UC Davis</a> in 2019 and I currently work in Mountain View, CA as a Software Engineer @ <a href="https://genapsys.com" target="_blank">Genapsys</a>.</p>
 								</ul>
 							</article>
 
