--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 									<ul>
 										<h4>Sep 2019 - Present</h4>
 										<ul>
-											<li>Building <b><a href="https://cloudapp.dev.genapsys.com" target="_blank">Genhub</a></b>, a Cloud Platform for <b><a href="https://en.wikipedia.org/wiki/Massive_parallel_sequencing" target="_blank">Next Generation Sequencing</a></b>. I am responsible for all things backend.</li>
+											<li>Building <b><a href="https://cloudapp.dev.genapsys.com" target="_blank">Genhub</a></b>, a Cloud Platform for <b><a href="https://en.wikipedia.org/wiki/Massive_parallel_sequencing" target="_blank">Next Generation Sequencing</a></b>.</li>
 										</ul>
 									</ul>
 								</ul>
